@@ -1,3 +1,7 @@
+2010-09-04 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/include/mcs51/AT89C513xA.h: new, added, thanks Anirban Brahmachari
+
 2010-08-26 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peeph-z80.def:
